--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,26 +20,6 @@ body {
     color: #1f2937;
 }
 
-/* Wrapper */
-
-#wrapper > * > .inner {
-    position: relative;
-    width: 100%;
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 10rem;
-    z-index: 2;
-}
-
-    /* iPads, tablets */
-    @media screen and (max-width: 768px) {
-
-        #wrapper > * > .inner {
-            padding: 0 5rem;
-        }
-
-    }
-
 /* Typography
 Adapted from Skeleton by David Gamache
 https://github.com/dhg/Skeleton/blob/master/css/skeleton.css */
@@ -59,7 +39,7 @@ h5 { font-size: 1.8rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.6; }
 
 h3.subheading {
-    font-size: 1em;
+    font-size: 1.6rem;
     text-align: center;
     margin-bottom: 0;
 }
@@ -75,7 +55,7 @@ h3.subheading {
 }
 
 p {
-    margin-top: 0;
+    margin: 0 0 2rem 0;
 }
 
 /* Links */
@@ -152,10 +132,6 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     z-index: 1;
 }
 
-.top-nav .right {
-    justify-content: flex-end;
-}
-
 .top-nav a {
     color: #f9faf8;
 }
@@ -166,28 +142,13 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     font-family: 'Srbija Sans', Arial, Helvetica, sans-serif;
 }
 
-.top-nav #menu {
+#menu {
     text-transform: uppercase;
     border: 1px #f9faf8 solid;
     padding: 0.6rem 0.8rem;
 }
 
-    /* Desktops, large screens */
-    @media screen and (max-width: 1440px) {
-        .top-nav #menu {
-            margin-right: 20rem;
-        }
-
-    }
-
-    /* iPads, tablets */
-    @media screen and (max-width: 768px) {
-        .top-nav #menu {
-            margin-right: 10rem;
-        }
-    }
-
-.top-nav #nav-links {
+#nav-links {
     display: none;
     position: absolute;
     right: 30rem;
@@ -195,18 +156,18 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     background-color: #1f2947;
 }
 
-.top-nav #nav-links a {
+#nav-links a {
     display: flex;
     flex-direction: row;
     padding: 1rem;
 }
 
-.top-nav #nav-links a:hover {
+#nav-links a:hover {
     background-color: #f9faf8;
     color: #1f2947;
 }
 
-.top-nav .flag {
+#nav-links img {
     width: 2rem;
     height: 2rem;
     background-color: transparent;
@@ -216,26 +177,22 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 /* Homepage Content */
 
 .hero {
-    color: #f9faf8;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 4rem;
+    color: #f9faf8;
 }
 
 .hero > * {
+    width: 100%;
     flex: 1;
 }
 
-.description {
-    margin: 1em 0;
-    font-size: 1em;
-    line-height: 1.4em;
-}
-
-.hero-image {
-    width: 30vw;
-    max-width: 800px;
+.hero img {
+    width: 20vw;
+    max-width: 600px;
 }
 
     /* Small screens, laptops */
@@ -243,15 +200,11 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
         .hero {
             flex-direction: column;
         }
-        .hero-left {
-            margin: 4em auto 0 auto;
-            width: 65vw;
-        }
-        .hero-right {
-            margin-top: 4em;
-        }
-        .hero-image {
+        .hero img {
             width: 60vw;
+        }
+        .hero *:first-child {
+            order: 2;
         }
     }
 
@@ -314,20 +267,19 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     font-size: 1.8rem;
     font-weight: 700;
     font-style: normal;
-    margin-bottom: 3em;
     margin-right: 0;
     margin-left: auto;
 }
 
 .cta {
+    width: 80%;
     background: #3882f6;
-    width: 60em;
-    padding: 2em 0;
     border-radius: 0.5em;
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-evenly;
-
+    margin: 2rem auto;
 }
 
 .cta-content {
@@ -351,7 +303,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 .cta-button {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     margin: 0 5em 0 3em;
 }
 
@@ -368,8 +320,8 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 /* iPads, tablets */
 @media (max-width: 768px) {
     .cta {
+        width: 100%;
         flex-direction: column;
-        width: 90%;
     }
     .cta-heading {
         text-align: center;
@@ -395,4 +347,22 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     .hero-image {
         /* width: 70vw; */
     }
+}
+
+/* Wrapper */
+
+#wrapper > * > .inner {
+    position: relative;
+    width: 80%;
+    max-width: 128rem;
+    margin: 0 auto;
+    z-index: 2;
+}
+
+#wrapper > * > .inner > * {
+    padding: 3rem 0;
+}
+
+.right {
+    justify-content: flex-end;
 }
