--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;600&display=swap');
+
 @font-face {
     font-family: 'Srbija Sans';
-    src: url(fonts/SrbijaSans.woff);
+    src: url(../fonts/SrbijaSans.woff);
 }
 
 /* Base Styles
 Adapted from Skeleton by David Gamache 
 https://github.com/dhg/Skeleton/blob/master/css/skeleton.css */
 html {
-    font-size: 62.5%; /* "[Set] to 62.5% so that all the REM measurements ...
+    font-size: 62.5%;
+    /* "[Set] to 62.5% so that all the REM measurements ...
     are based on 10px sizing." */
 }
 
@@ -24,19 +26,49 @@ body {
 Adapted from Skeleton by David Gamache
 https://github.com/dhg/Skeleton/blob/master/css/skeleton.css */
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #1F2937;
     margin-top: 0;
     margin-bottom: 2rem;
     font-family: 'Srbija Sans', Arial, Helvetica, sans-serif;
 }
 
-h1 { font-size: 4.0rem; line-height: 1.2; color: #f9faf8; }
-h2 { font-size: 3.3rem; line-height: 1.25; text-align: center; }
-h3 { font-size: 3.0rem; line-height: 1.3; }
-h4 { font-size: 2.4rem; line-height: 1.35; }
-h5 { font-size: 1.8rem; line-height: 1.5; }
-h6 { font-size: 1.5rem; line-height: 1.6; }
+h1 {
+    font-size: 4.0rem;
+    line-height: 1.2;
+    color: #f9faf8;
+}
+
+h2 {
+    font-size: 3.3rem;
+    line-height: 1.25;
+    text-align: center;
+}
+
+h3 {
+    font-size: 3.0rem;
+    line-height: 1.3;
+}
+
+h4 {
+    font-size: 2.4rem;
+    line-height: 1.35;
+}
+
+h5 {
+    font-size: 1.8rem;
+    line-height: 1.5;
+}
+
+h6 {
+    font-size: 1.5rem;
+    line-height: 1.6;
+}
 
 h3.subheading {
     font-size: 1.6rem;
@@ -46,12 +78,29 @@ h3.subheading {
 
 /* Desktops, large screens */
 @media screen and (min-width: 1200px) {
-    h1 { font-size: 5.0rem; }
-    h2 { font-size: 4.2rem; }
-    h3 { font-size: 3.6rem; }
-    h4 { font-size: 3.0rem; }
-    h5 { font-size: 2.4rem; }
-    h6 { font-size: 1.5rem; }
+    h1 {
+        font-size: 5.0rem;
+    }
+
+    h2 {
+        font-size: 4.2rem;
+    }
+
+    h3 {
+        font-size: 3.6rem;
+    }
+
+    h4 {
+        font-size: 3.0rem;
+    }
+
+    h5 {
+        font-size: 2.4rem;
+    }
+
+    h6 {
+        font-size: 1.5rem;
+    }
 }
 
 p {
@@ -64,7 +113,8 @@ a {
     text-decoration: none;
 }
 
-.button, button {
+.button,
+button {
     display: inline-block;
     height: 38px;
     padding: 0 30px;
@@ -79,18 +129,21 @@ a {
     transition: 0.3s;
 }
 
-.button:hover, button:hover {
+.button:hover,
+button:hover {
     color: #ffffff;
     border-color: #ffffff;
     background-color: rgba(255, 255, 255, 0.1);
 }
 
-.button.button-primary, button.button-primary {
+.button.button-primary,
+button.button-primary {
     background: #3882f6;
     border: 0;
 }
 
-.button.button-primary:hover, button.button-primary:hover {
+.button.button-primary:hover,
+button.button-primary:hover {
     background: #619EFF;
 }
 
@@ -185,7 +238,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     color: #f9faf8;
 }
 
-.hero > * {
+.hero>* {
     width: 100%;
     flex: 1;
 }
@@ -195,18 +248,20 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     max-width: 600px;
 }
 
-    /* Small screens, laptops */
-    @media (max-width: 1024px) {
-        .hero {
-            flex-direction: column;
-        }
-        .hero img {
-            width: 60vw;
-        }
-        .hero *:first-child {
-            order: 2;
-        }
+/* Small screens, laptops */
+@media (max-width: 1024px) {
+    .hero {
+        flex-direction: column;
     }
+
+    .hero img {
+        width: 60vw;
+    }
+
+    .hero *:first-child {
+        order: 2;
+    }
+}
 
 .info {
     padding: 2.5em;
@@ -307,29 +362,34 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     margin: 0 5em 0 3em;
 }
 
-    /* iPads, tablets */
-    @media (max-width: 768px) {
-        .cta {
-            width: 100%;
-            flex-direction: column;
-        }
-        .cta-heading {
-            text-align: center;
-        }
-        .cta-button {
-            margin: 1em auto 0 auto;
-        }
-        .cta-content {
-            align-items: center;
-            padding: 0;
-            margin: 0 1em;
-        }
-        .cta-subtext {
-            text-align: center;
-        }
-        .info-content {
-            flex-direction: column;
-        }
+/* iPads, tablets */
+@media (max-width: 768px) {
+    .cta {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .cta-heading {
+        text-align: center;
+    }
+
+    .cta-button {
+        margin: 1em auto 0 auto;
+    }
+
+    .cta-content {
+        align-items: center;
+        padding: 0;
+        margin: 0 1em;
+    }
+
+    .cta-subtext {
+        text-align: center;
+    }
+
+    .info-content {
+        flex-direction: column;
+    }
 }
 
 .footer {
@@ -344,7 +404,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 
 /* Wrapper */
 
-#wrapper > * > .inner {
+#wrapper>*>.inner {
     position: relative;
     width: 80%;
     max-width: 128rem;
@@ -352,7 +412,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     z-index: 2;
 }
 
-#wrapper > * > .inner > * {
+#wrapper>*>.inner>* {
     padding: 3rem 0;
 }
 
