--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 
 /* Small screens, laptops */
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .hero {
         flex-direction: column;
         padding-bottom: 3rem;
@@ -258,60 +258,87 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     }
 }
 
-.info {
+.featured {
     position: relative;
     box-shadow: 0 0 2rem #000000;
     padding: 3rem 0;
+    flex: 1;
     z-index: 2;
 }
 
-/* .info>* {
-    width: 100%;
-    flex: 1;
-} */
-
-.info h2 {
+.featured h2 {
     text-align: center;
     margin-bottom: 3rem;
 }
 
-.info h3 {
+.featured h3 {
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1vw;
     margin-bottom: 0;
 }
 
-.info-content {
+/* Small screens, laptops */
+
+@media screen and (max-width: 1024px) {
+
+    .featured h3 {
+        font-size: 1.6rem;
+    }
+}
+
+.info {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.info-container {
+.info>* {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    flex: 1;
 }
 
-.info-image {
+.info .thumbnail {
     width: 14vw;
     height: 14vw;
+    padding-bottom: 1.5rem;
+}
+
+.info img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 1.5em;
+    border-radius: 1.2rem;
     opacity: 0.8;
     transition: 0.3s;
 }
 
-.info-image:hover {
+.info img:hover {
     transform: scale(1.05);
     opacity: 1;
 }
 
-.info-subtext {
+.info p {
+    width: 80%;
     color: #1F2937;
     text-align: center;
     font-size: 0.8em;
+}
+
+/* Small screens, laptops */
+
+@media screen and (max-width: 1024px) {
+    .info {
+        flex-direction: column;
+    }
+    .info .thumbnail {
+        width: 100%;
+        height: 42vw;
+    }
 }
 
 .quote {
@@ -376,7 +403,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 
 /* iPads, tablets */
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .cta {
         width: 100%;
         flex-direction: column;
@@ -398,10 +425,6 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 
     .cta-subtext {
         text-align: center;
-    }
-
-    .info-content {
-        flex-direction: column;
     }
 }
 
