--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #1F2937;
+    color: #1f2937;
     margin-top: 0;
     margin-bottom: 1rem;
     font-family: 'Srbija Sans', Arial, Helvetica, sans-serif;
@@ -100,6 +100,20 @@ h6 {
 
 p {
     margin: 0 0 2rem 0;
+}
+
+blockquote {
+    font-size: 3.2rem;
+    font-style: italic;
+    text-align: center;
+    text-shadow: 0 0 1em black, 0 0 2em black;
+}
+
+menu,
+ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
 }
 
 /* Links */
@@ -203,9 +217,10 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     background-color: #1f2947;
 }
 
-#nav-links a {
+menu a {
     display: flex;
     flex-direction: row;
+    align-items: center;
     padding: 1rem;
 }
 
@@ -221,7 +236,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     padding: 0 1rem 0 0;
 }
 
-/* Homepage Content */
+/* Hero Section */
 
 .hero {
     display: flex;
@@ -258,6 +273,8 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     }
 }
 
+/* Featured Section */
+
 .featured {
     position: relative;
     box-shadow: 0 0 2rem #000000;
@@ -271,7 +288,9 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     margin-bottom: 3rem;
 }
 
-.featured h3 {
+.featured figcaption {
+    font-family: 'Srbija Sans', Arial, Helvetica, sans-serif;
+    color: #1f2937;
     text-align: center;
     font-size: 1.2vw;
     margin-bottom: 0;
@@ -281,7 +300,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 
 @media screen and (max-width: 1024px) {
 
-    .featured h3 {
+    .featured figcaption {
         font-size: 2.4rem;
     }
 }
@@ -289,7 +308,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 .info {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -305,7 +324,12 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 .info .thumbnail {
     width: 14vw;
     height: 14vw;
-    padding-bottom: 1.5rem;
+    flex-direction: column;
+    margin-bottom: 1.5rem;
+}
+
+.info figure {
+    width: 100%;
 }
 
 .info img {
@@ -323,7 +347,7 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
 }
 
 .info p {
-    color: #1F2937;
+    color: #1f2937;
     text-align: center;
 }
 
@@ -339,101 +363,96 @@ https://www.w3schools.com/howto/howto_js_mobile_navbar.asp */
     }
 }
 
+/* Quote Section */
+
+/* figure
+blockquote
+figcaption */
+
 .quote {
-    /* width: 100%; */
     display: flex;
-    /* flex-wrap: wrap;
-    flex: 1; */
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    font-size: 2.8rem;
-    font-style: italic;
-    text-align: center;
     color: #f9faf8;
-    text-shadow: 0 0 1em black, 0 0 2em black;
+    margin: 3rem;
 }
 
 .quote .author {
     font-size: 1.8rem;
     font-weight: 600;
     font-style: normal;
+    margin-top: 0;
     margin-right: 0;
     margin-left: auto;
 }
 
+/* Small screens, laptops */
+
+@media screen and (max-width: 1024px) {
+    .quote {
+        font-size: 2.4rem;
+    }
+    .quote .author {
+        font-size: 1.6rem;
+    }
+}
+
+/* Call to Action */
+
 .cta {
-    width: 80%;
-    background: #3882f6;
-    border-radius: 0.5em;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin: 2rem auto;
-    padding: 2rem 0;
-}
-
-.cta-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     color: #f9faf8;
-    padding: 0 2em 0 4em;
-    line-height: 1.3em;
+    background: #3882f6;
+    border-radius: 0.5em;
+    padding: 3rem 8rem;
+    margin: 2rem auto;
 }
 
-.cta-heading {
-    font-size: 1.1em;
+.cta h2 {
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
+    font-size: 1.8rem;
     font-weight: bold;
+    color: #f9faf8;
 }
 
-.cta-subtext {
-    margin-top: 3px;
-}
-
-.cta-button {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    margin: 0 5em 0 3em;
+.cta p {
+    margin: 0;
 }
 
 /* iPads, tablets */
 
 @media screen and (max-width: 768px) {
     .cta {
-        width: 100%;
         flex-direction: column;
     }
 
-    .cta-heading {
+    .cta h2 {
         text-align: center;
+        margin-bottom: 2rem;
     }
 
-    .cta-button {
-        margin: 1em auto 0 auto;
-    }
-
-    .cta-content {
-        align-items: center;
-        padding: 0;
-        margin: 0 1em;
-    }
-
-    .cta-subtext {
+    .cta p {
         text-align: center;
     }
 }
 
-.footer {
-    color: #f9faf8;
-    background: rgb(19, 25, 41);
-    padding: 1.25em 0;
+/* Footer */
+
+footer {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    color: #f9faf8;
+    background: #1f2937;
+    box-shadow: 0 0 2rem #000000;
+    padding: 1.5rem;
+    z-index: 2;
 }
 
 /* Wrapper */
